# sagemaker-training

./: .gitignore  Dockerfile  LICENSE  PROJECT_ROADMAP.md  README.md  action.yml  entrypoint.sh  package.json  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: release.yml  security.yml  test.yml
examples/: basic-training.yml  custom-container.yml  custom-python-training.yml  hyperparameter-tuning.yml
examples/ml-code/: inference.py  requirements.txt  train.py
schema/: input-schema.json
src/: __init__.py  aws_auth.py  main.py  sagemaker_client.py  utils.py  validators.py
tests/fixtures/: sample_inputs.json
tests/integration/: test_sagemaker_integration.py
tests/unit/: test_utils.py  test_validators.py
